[package]
name = "inline-rt-hlsl"
edition = "2021"

[dependencies]
cocoa = "0.25.0"
core-graphics-types = "0.1.2"
glam = "0.24.1"
gltf = "1.3.0"
metal = { git = "https://github.com/Traverse-Research/metal-rs", rev = "d40f71a" }
objc = "0.2.7"
stb_image = "0.2.5"
winit = "0.28.6"
saxaboom = { git = "https://github.com/Traverse-Research/saxaboom", rev = "082f7fe" }
libloading = "0.8.3"